version 9.0.
date: dd/mm/yyyy
  * implemented project facets
  * added support for the Freecamp collaboration system
  * added support for internationalization (i18n)
  * added data type information in the single-value custom form preview
  * added mapping property to the descriptions of correspondences in the EDOAL data view
  * fixed a bug in the search services on a local project
  * fixed a bug that occurred when updating the email address of an administrator user
  * updates to the OntoPortal deployer, allowing for a specific configuration dedicated to EcoPortal
  * enabled nesting of settings
  * enabled open enumerations in settings
  * align the server to the client concerning validation of properties objects
  * stripped type annotations on the generated service code
  * allowed the use @LanguageTaggedString to annotate types
  * the order of set-typed fields of STProperties is now preserved on deserialization (using a LinkedHashSet)
  * fields inherited by an STProperties are listed before the locally defined ones when producing a 
    serialization for display
  * reimplemented STPropertiesChecker using Hibernate to support additional property constraints
  * updated StoredExportConfiguration to make transformationPipeline optional
  * allowed to manipulate namespace prefixes in project using validation
  * updated dependency on Sheet2RDF 4.0.2

version 8.0.1
date: 08/10/2020
  * improved the performance of the history paging service
  * improved the performance when loading the topConcept in the concept tree
  * improved the performance of the service listing recommended properties for a resource
  * added inference for the cform term to cover all cform(_) and cform(_,_) expressions
  * added an option to the resview for toggling the show of deprecated concepts
  * added zip files to the range of supported file types when loading data
  * enable the triple editor also for other roles than the administrator, by associating the capability rdf(code)