@@ -1,5 +1,8 @@
 version 9.0.
 date: dd/mm/yyyy
+  * added the possibility to deactivate/activate the Collaboration System for a VB project without removing the
+    credentials
+  * added the possibility to remove a resource from an issue (Collaboration system: Jira and Freedcamp)
   * implemented project facets
   * added support for the Freecamp collaboration system
   * added support for internationalization (i18n)
